# homelab

./: .env.example  .gitignore  .gitleaks.toml  README.md  shutdown-artemis.sh  shutdown-delphi.sh  terraform.sh
backup/: main.tf  state.tf  variables.tf  velero-crds.tf  velero-node-agent.tf  velero-rbac.tf  velero-resources.tf  velero-secrets.tf  velero-server.tf
cluster/: README.md  cluster.tf  main.tf  outputs.tf  state.tf  variables.tf
data/: backup-headscale-cron.tpl  backup-headscale.sh.tpl  config.yaml.tpl  headscale.service.tpl  journald.conf.tpl  nginx.conf.tpl  nomad.hcl.tpl
data/audiobookshelf/: podcasts.example.opml  seed.py  test_seed.py
data/containerd/: config.toml.tpl  create-devmapper-sparse.sh.tpl  reload-devmapper-thinpool.service.tpl  reload-devmapper-thinpool.sh.tpl
data/dashboards/: akash-devops-primefocus-objh.json  amd-gpu.json  fLi0yXAWk.json  homelab-overview-v2.json  k8s_views_global.json  k8s_views_nodes.json  k8s_views_pods.json  rYdddlPWk.json
data/exitnode-haproxy/: haproxy.cfg.tpl
data/forgejo/: app.ini.tpl
data/frigate/: config.yml.tpl  seed-admin.py
data/git-runner/: config.yaml.tpl
data/headscale/: acls.hjson.tpl  config.yaml.tpl  headscale-merge-config.sh  headscale-oidc-watchdog.service.tpl  (+4 more)
data/images/mcp-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md
data/images/mcp-rs/crates/mcp-common/: Cargo.toml
data/images/mcp-rs/crates/mcp-common/src/: auth.rs  env.rs  errors.rs  lib.rs  serve.rs  store.rs  tenant.rs  trace.rs
data/images/mcp-rs/crates/mcp-filesystem/: Cargo.toml
data/images/mcp-rs/crates/mcp-filesystem/src/: edit.rs  main.rs  sandbox.rs  server.rs  tools.rs
data/images/mcp-rs/crates/mcp-filesystem/tests/: common.rs  it.rs
data/images/mcp-rs/crates/mcp-k8s/: Cargo.toml
data/images/mcp-rs/crates/mcp-k8s/src/: main.rs  qty.rs  redact.rs  server.rs  tools.rs
data/images/mcp-rs/crates/mcp-litellm/: Cargo.toml
data/images/mcp-rs/crates/mcp-litellm/src/: main.rs  scope.rs  server.rs  tools.rs
data/images/mcp-rs/crates/mcp-litellm/tests/: common.rs  it.rs
data/images/mcp-rs/crates/mcp-memory/: Cargo.toml
data/images/mcp-rs/crates/mcp-memory/src/: graph.rs  main.rs  server.rs  tools.rs
data/images/mcp-rs/crates/mcp-memory/tests/: common.rs  it.rs
data/images/mcp-rs/crates/mcp-prometheus/: Cargo.toml
data/images/mcp-rs/crates/mcp-prometheus/src/: client.rs  main.rs  server.rs  tools.rs  validate.rs
data/images/mcp-rs/crates/mcp-prometheus/tests/: it.rs
data/images/mcp-rs/crates/mcp-searxng/: Cargo.toml
data/images/mcp-rs/crates/mcp-searxng/src/: main.rs  server.rs  ssrf.rs  strip.rs  tools.rs
data/images/mcp-rs/crates/mcp-searxng/tests/: it.rs
data/images/mcp-rs/crates/mcp-time/: Cargo.toml
data/images/mcp-rs/crates/mcp-time/src/: main.rs  server.rs  tools.rs
data/images/mcp-rs/crates/mcp-time/tests/: common.rs  it.rs
data/images/navidrome-ingest/: Dockerfile  pyproject.toml  test_worker.py  test_youtube_lookup.py  worker.py  youtube_lookup.py
esphome/: README.md  Remote.ir  esp32c6-dreo-fan-1.yaml  esp32c6-dreo-fan-2.yaml  run.sh  secrets.yaml.tpl
headscale/: main.tf  variables.tf
homelab/: .terraform.lock.hcl  README.md  backup-bucket.tf  main.tf  oidc-proxy.tf  output.tf  outputs.tf  ses.tf  variables.tf  zitadel-domain-verify-iam.tf
monitoring/: README.md  alertmanager-config.tf  grafana-pvc.tf  grafana-secrets.tf  grafana.tf  headscale-host-otel.tf  kube-state-metrics.tf  main.tf  monitoring-network.tf  nfty.tf  node-exporter.tf  ntfy-config.tf  ntfy-pvc.tf  ntfy-secrets.tf  ntfy.tf  openobserve-bootstrap.tf  openobserve-config.tf  openobserve-provisioner.tf  openobserve-secrets.tf  openobserve.tf  otel-collector-config.tf  otel-collector-secrets.tf  otel-collector.tf  outputs.tf  prometheus-config.tf  prometheus-pvc.tf  prometheus-secrets.tf  prometheus.tf  reloader.tf  state.tf  variables.tf
monitoring-conf/: README.md  alerting.tf  main.tf  state.tf  variables.tf
nextcloud/: README.md  builder-buildkitd-config.tf  builder-network.tf  builder-secrets.tf  collabora-config.tf  collabora-secrets.tf  collabora.tf  data.tf  exitnode-haproxy-config.tf  exitnode-haproxy-secrets.tf  exitnode-haproxy.tf  exitnode-network.tf  exitnode-secrets.tf  exitnode-tinyproxy-jobs.tf  exitnode.tf  frigate-config.tf  frigate-pvc.tf  frigate-secrets.tf  frigate.tf  harp-secrets.tf  harp.tf  homeassist-config.tf  homeassist-mosquitto-config.tf  homeassist-mosquitto-secrets.tf  homeassist-mosquitto.tf  homeassist-network.tf  homeassist-secrets.tf  homeassist-z2m-config.tf  homeassist-z2m-pvc.tf  homeassist-z2m-secrets.tf  homeassist-z2m.tf  homeassist.tf  immich-config.tf  immich-pvc.tf  immich-secrets.tf  immich.tf  jellyfin-config.tf  jellyfin-network.tf  jellyfin-secrets.tf  jobs.tf  (+99 more)
security/: SECURITY.md  kubescape.sh  trivy.sh
services/: README.md  amd-gpu-metrics-exporter.tf  amd-gpu-plugin.tf  audiobookshelf-jobs.tf  audiobookshelf.tf  aws-iam-route53.tf  builder-buildkitd-config.tf  builder-network.tf  collabora-secrets.tf  collabora.tf  exitnode-config.tf  exitnode-haproxy-config.tf  exitnode-haproxy-secrets.tf  exitnode-haproxy.tf  exitnode-network.tf  exitnode-tinyproxy-jobs.tf  exitnode.tf  frigate-jobs.tf  frigate-network.tf  frigate-secrets.tf  frigate.tf  git-runner-jobs.tf  git-runner.tf  git.tf  grafana-config.tf  grafana-namespace.tf  grafana-network.tf  grafana-secrets.tf  grafana.tf  headlamp-namespace.tf  headlamp-network.tf  headlamp.tf  headscale-host-otel.tf  headscale-oidc.tf  homeassist-config.tf  homeassist-jobs.tf  homeassist-mosquitto-pvc.tf  homeassist-mosquitto.tf  homeassist-pvc.tf  homeassist-secrets.tf  (+145 more)
services-conf/: README.md  dashboards.tf  main.tf  state.tf
vault/: README.md  csi.tf  dns.tf  main.tf  output.tf  outputs.tf  state.tf  variables.tf  vault-config.tf  vault-csi-network.tf  vault-network.tf  vault-pvc.tf  vault-secrets.tf  vault.tf
vault-conf/: README.md  auth.tf  kv.tf  locals.tf  main.tf  output.tf  outputs.tf  smtp.tf  state.tf  variables.tf  zitadel-domain-verify.tf  zitadel-pat-sync.tf  zitadel-postgres.tf  zitadel.tf
(+296 files in other folders)
