[workspace]
resolver = "2"
members = [
    "crates/mcp-common",
    "crates/mcp-filesystem",
    "crates/mcp-k8s",
    "crates/mcp-litellm",
    "crates/mcp-memory",
    "crates/mcp-prometheus",
    "crates/mcp-searxng",
    "crates/mcp-time",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
rmcp = { version = "1.6", default-features = false, features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "process", "io-util", "net", "time"] }
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "json", "query"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "stream", "gzip", "http2"] }
sha2 = "0.11"
hex = "0.4"
subtle = "2"
tempfile = "3"
walkdir = "2"
glob = "0.3"
similar = { version = "2.7", features = ["text"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "6"
jiff = { version = "0.2", features = ["serde"] }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls", "ring", "config"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
ipnet = "2"
url = "2"
bytes = "1"
http = "1"
http-body-util = "0.1"

[workspace.dependencies.wiremock]
version = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release.package."*"]
opt-level = 3
