[project]
name = "navidrome-ingest"
version = "0.1.0"
description = "Pull dropzone files from ingest-ui, tag via LiteLLM, write to navidrome-music."
requires-python = ">=3.12"
dependencies = [
    "mutagen==1.47.*",
    "av>=17.0.0,<18",
    "litellm==1.55.*",
    "aiohttp==3.10.*",
    "jinja2==3.1.*",
    "httpx>=0.27,<0.29",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "numpy>=2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
