[package]
name = "mcp-filesystem"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
mcp-common = { path = "../mcp-common" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time", "net"] }
tempfile = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
